syntax = "proto3";
package org.example;

option java_package = "org.example.protobuffprotocol";
option java_outer_classname = "Protobufs";

message PersoanaOficiuDto{
  string name = 1;
  string password = 2;
}

message ParticipantsByRaceDto{
  string cursa = 1;
  int32 nrParticipanti = 2;
}

message TeamsAndParticipantsDto{
  string echipa = 1;
  string participant = 2;
}

message ClientRequest {
  enum Type {Unkown = 0; LOGIN = 1; NEW_PARTICIPANT = 2; NR_PARTICIPANTS_BYRACE = 3; PARTICIPANTS_BYTEAM = 4; LOGOUT = 5;}

  // Identifies which request is filled in.
  Type type = 1;

  // One of the following will be filled in, depending on the type.
    PersoanaOficiuDto user = 2;

    // pentru LOGOUT persoanaOficiu
    string persoanaOficiuName = 3;

    // pentru FILTRARE PARTICIPANTI DUPA ECHIPA
    string numeEchipa = 4;

    // adaugare nou participant
    string numeParticipant = 5;
//    string numeEchipa = 6;
    string numeCursa = 7;
}

message ClientResponse{
  enum Type {Unknown = 0; OK = 1; ERROR = 2; PERSOANAOFICIU_LOGGED_IN = 3;}

  // Identifies which request is filled in.
  Type type = 1;

  // One of the following will be filled in, depending on the type.
  string error = 2;

  repeated ParticipantsByRaceDto participantsByRaceDto = 3;
  ParticipantsByRaceDto participantByRaceDto = 4;
  repeated TeamsAndParticipantsDto teamsAndParticipantsDto = 5;
  TeamsAndParticipantsDto teamAndParticipantsDto = 6;
}

